--- a/my-app/views/CreateNewUser.hbs
+++ b/my-app/views/CreateNewUser.hbs
@@ -18,7 +18,7 @@
     </td>
     </th>
     <tr class='data row' style="display:flex; flex-direction:row; justify-content:space-between; width:100%; text-align:center">
-        <form method = 'POST' action = 'http://localhost:3001/CreateUser' name="createuserform">
+        <form method = 'POST' id="createuserform" action = 'http://localhost:3001/CreateUser' name="createuserform">
             <td class="user first name" style="padding: 0pt 5pt 0pt 5pt; border: 2px ridge black; width: 20%; text-align: center;">
                 <input type = 'text' name = 'UserFName' required/>
             </td>
