--- a/my-app/views/EditTask.hbs
+++ b/my-app/views/EditTask.hbs
@@ -23,7 +23,7 @@
     </td>
     </th>
     <tr class='data row' style="display:flex; flex-direction:row; justify-content:space-between; width:100%; text-align:center">
-        <form method = 'POST' action = 'http://localhost:3001/CreateTask' name="createtaskform">
+        <form method = 'POST' id="createtaskform" action = 'http://localhost:3001/CreateTask' name="createtaskform">
             <input type='hidden' name = 'IdTask' value = '{{IdTask}}' />
     <td class="task header" style="padding: 0pt 5pt 0pt 5pt; border: 2px ridge black; width: 15%; text-align: center;">
         <input type = 'text' name = 'TaskHeader' style="width: 100%;" required/>
